--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,8 +18,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Instalar dependências
-        run: dotnet restore
-
+        run: dotnet restore src/fiap-catalog-service.sln
+        
       - name: Compilar aplicação
         run: dotnet build --configuration Release
 
