--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Executar testes
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test src/fiap-catalog-service.sln --no-build --verbosity normal
 
   deploy:
     if: github.ref == 'refs/heads/main'
@@ -41,12 +41,12 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: Preparar artefato para deploy
-        run: |
-          zip -r deploy.zip . -x "*.git*"
+      - name: Simular criação do artefato para deploy
+        run: echo "Criando artefato fake para deploy..."
 
-      - name: Deploy no AWS Lambda
-        run: |
-          aws lambda update-function-code \
-          --function-name fiap-catalog-service \
-          --zip-file fileb://deploy.zip
+      - name: Simular upload do artefato
+        run: echo "Upload fake realizado!"
+
+      - name: Simular deploy na AWS Lambda
+        run: echo "Simulando deploy no AWS Lambda..."
+
