--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Executar testes
-        run: dotnet test src/fiap-catalog-service.sln --no-build --verbosity normal
+        run: dotnet test src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj --configuration Release
 
   deploy:
     if: github.ref == 'refs/heads/main'
