--- a/src/fiap-catalog-service/fiap-catalog-service.csproj
+++ b/src/fiap-catalog-service/fiap-catalog-service.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="4.0.0.5" />
+    <PackageReference Include="AWSSDK.SQS" Version="4.0.0.3" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.13" />
