Migrate to AWS serverless architecture with SAM support
Transitioned the application from localstack to AWS serverless:
- Added AWS Lambda hosting and SAM template for infrastructure.
- Configured DynamoDB, SQS, and Application Insights resources.
- Updated `Program.cs` for AWS client initialization.
- Enhanced exception logging in `VehicleEndpoints.cs`.
- Updated SQS queue URL to production in `SqsService.cs`.
- Added AWS region to `appsettings.Development.json`.
- Simplified SQS-related tests in `SqsServiceTests.cs`.
- Added `.aws-sam` to `.gitignore`.

These changes prepare the app for production in AWS.

--- a/src/fiap-catalog-service/appsettings.Development.json
+++ b/src/fiap-catalog-service/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AWS": {
+    "Region": "us-east-1"
   }
 }
