--- a/src/fiap-catalog-service/fiap-catalog-service.csproj
+++ b/src/fiap-catalog-service/fiap-catalog-service.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="9.1.1" />
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.8.1" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="4.0.0.5" />
     <PackageReference Include="AWSSDK.SQS" Version="4.0.0.3" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
