Refactor SAM template for vehicle catalog service
Updated the `Description` field to better describe the architecture as a microservices-based vehicle catalog system. Removed the `Globals` section and renamed `NetCodeWebAPIServerless` to `FiapCatalogApi`, updating its type and properties. Enhanced the `Environment` section with a reference to `VEHICLES_TABLE` and removed the `Policies` section. Refined the `HttpApi` resource with `Path` and `Method` configurations. Re-added properties to `VehicleEventsQueue` without changes. Simplified comments and removed unnecessary details for clarity.

--- a/template.yaml
+++ b/template.yaml
@@ -1,35 +1,29 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 Description: >
-  Sample SAM Template for fiap-catalog-service
+  Arquitetura baseada em microsserviços para catálogo de veículos, utilizando AWS Lambda, Amazon SQS e DynamoDB
 
-# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
     Timeout: 100
 
     Tracing: Active
-    # You can add LoggingConfig parameters such as the Logformat, Log Group, and SystemLogLevel or ApplicationLogLevel. Learn more here https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html#sam-function-loggingconfig.
     LoggingConfig:
       LogFormat: JSON
   Api:
     TracingEnabled: true
 Resources:
-  NetCodeWebAPIServerless:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+  FiapCatalogApi:
+    Type: AWS::Serverless::Function
     Properties:
-      Description:
-        A simple example includes a .NET Core WebAPI App with DynamoDB
-        table.
       CodeUri: ./src/fiap-catalog-service/
       Handler: fiap-catalog-service
       Runtime: dotnet8
       MemorySize: 1024
-      Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
+      Environment:
         Variables:
           VEHICLES_TABLE: !Ref VehiclesTable
       Policies:
-        # Give Create/Read/Update/Delete Permissions to the VehiclesTable
         - DynamoDBCrudPolicy:
             TableName: !Ref VehiclesTable
         - Statement:
@@ -51,7 +45,6 @@ Resources:
             Path: /
             Method: ANY
 
-  # DynamoDB table to store item: {id: &lt;ID&gt;, name: &lt;NAME&gt;}
   VehiclesTable:
     Type: AWS::Serverless::SimpleTable
     Properties:
@@ -67,9 +60,9 @@ Resources:
     Type: AWS::SQS::Queue
     Properties:
       QueueName: VehicleEventsQueue
-      VisibilityTimeout: 30 # Tempo máximo que uma mensagem fica invisível após ser consumida
-      MessageRetentionPeriod: 86400 # Retenção de mensagens (1 dia)
-      ReceiveMessageWaitTimeSeconds: 10 # Polling longo para reduzir consumo excessivo
+      VisibilityTimeout: 30
+      MessageRetentionPeriod: 86400
+      ReceiveMessageWaitTimeSeconds: 10
 
   ApplicationResourceGroup:
     Type: AWS::ResourceGroups::Group
