--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,6 +34,7 @@ jobs:
         run: dotnet test src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj --configuration Release
 
   deploy:
+    if: github.ref == 'refs/heads/main'
     needs: tests
     runs-on: ubuntu-latest
     steps:
