--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,6 +34,7 @@ jobs:
         run: dotnet test src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj --configuration Release
 
   sonar:
+    needs: tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout código
@@ -55,7 +56,7 @@ jobs:
 
   deploy:
     if: github.ref == 'refs/heads/main'
-    needs: tests
+    needs: sonar
     runs-on: ubuntu-latest
     steps:
       - name: Checkout código
