--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Instalar dependências
         run: dotnet restore src/fiap-catalog-service.sln
-        
+
       - name: Compilar aplicação
         run: dotnet build src/fiap-catalog-service.sln --configuration Release
 
@@ -39,40 +39,55 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '8.0.x'  # ou a versão do seu projeto
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.x'
 
-    - name: Install SonarScanner for .NET
-      run: dotnet tool install --global dotnet-sonarscanner
+      - name: Instalar SonarScanner para .NET
+        run: dotnet tool install --global dotnet-sonarscanner
 
-    - name: Add SonarScanner to PATH
-      run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
+      - name: Adicionar SonarScanner ao PATH
+        run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-    - name: Begin SonarCloud analysis
-      run: |
-        dotnet sonarscanner begin `
-          /k:"guilherme-martins92_fiap-catalog-service" `
-          /o:"guilherme-martins92" `
-          /d:sonar.login="${{ secrets.SONAR_TOKEN }}" `
-          /d:sonar.host.url="https://sonarcloud.io"
-      shell: pwsh
+      - name: Iniciar análise SonarCloud
+        run: |
+          dotnet sonarscanner begin `
+            /k:"guilherme-martins92_fiap-catalog-service" `
+            /o:"guilherme-martins92" `
+            /d:sonar.login="${{ secrets.SONAR_TOKEN }}" `
+            /d:sonar.host.url="https://sonarcloud.io" `
+            /d:sonar.cs.opencover.reportsPaths="**/coverage.cobertura.xml"
+        shell: pwsh
 
-    - name: Build Project
-      run: dotnet build src/fiap-catalog-service.sln --no-incremental
+      - name: Compilar projeto
+        run: dotnet build src/fiap-catalog-service.sln --no-incremental
 
-    - name: Test Project
-      run: dotnet test src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj --no-build
+      - name: Executar testes com cobertura
+        run: |
+          dotnet test src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj `
+            --no-build `
+            --collect:"XPlat Code Coverage" `
+            --results-directory:./TestResults
+        shell: pwsh
 
-    - name: End SonarQube Analysis
-      run: |
-        dotnet sonarscanner end `
-          /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-      shell: pwsh
+      - name: Converter cobertura para formato Cobertura
+        run: |
+          dotnet tool install -g dotnet-reportgenerator-globaltool
+          reportgenerator `
+            -reports:"TestResults/**/coverage.cobertura.xml" `
+            -targetdir:"CoverageReport" `
+            -reporttypes:Cobertura
+        shell: pwsh
+
+      - name: Finalizar análise SonarCloud
+        run: |
+          dotnet sonarscanner end `
+            /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+        shell: pwsh
 
   deploy:
     if: github.ref == 'refs/heads/main'
@@ -83,8 +98,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Instalar AWS SAM CLI
-        run: |
-          pip install aws-sam-cli
+        run: pip install aws-sam-cli
 
       - name: Configurar credenciais AWS
         uses: aws-actions/configure-aws-credentials@v2
