--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,8 +32,9 @@ jobs:
 
       - name: Executar testes com cobertura
         run: |
-          dotnet test src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj `
+          dotnet test "src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj" `
           --no-build `
+          --configuration Release `
           /p:CollectCoverage=true `
           /p:CoverletOutputFormat=cobertura `
           /p:CoverletOutput=TestResults/coverage.cobertura.xml
