--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -60,17 +60,28 @@ jobs:
             /o:"guilherme-martins92" `
             /d:sonar.login="${{ secrets.SONAR_TOKEN }}" `
             /d:sonar.host.url="https://sonarcloud.io" `
-            /d:sonar.cs.opencover.reportsPaths="**/coverage.cobertura.xml"
+            /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
         shell: pwsh
 
       - name: Compilar projeto
         run: dotnet build src/fiap-catalog-service.sln --no-incremental
 
-      - name: Run tests with coverage
-        run: dotnet test src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj --no-build --collect:"XPlat Code Coverage"
+      - name: Executar testes com cobertura
+        run: |
+          dotnet test src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj `
+            --no-build `
+            --collect:"XPlat Code Coverage" `
+            --results-directory:./TestResults
+        shell: pwsh
 
-      - name: Convert coverage to OpenCover format
-        run: reportgenerator -reports:**/coverage.cobertura.xml -targetdir:coveragereport -reporttypes:HtmlInline_AzurePipelines;Cobertura -reporttypes:OpenCover -filefilters:+*.cs -assemblyfilters:+*
+      - name: Converter cobertura para formato OpenCover
+        run: |
+          dotnet tool install -g dotnet-reportgenerator-globaltool
+          reportgenerator `
+            -reports:"TestResults/**/coverage.cobertura.xml" `
+            -targetdir:"CoverageReport" `
+            -reporttypes:OpenCover
+        shell: pwsh
 
       - name: Finalizar análise SonarCloud
         run: |
