--- a/src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj
+++ b/src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj
@@ -8,6 +8,8 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <CollectCoverage>true</CollectCoverage>
+    <CoverletOutputFormat>cobertura</CoverletOutputFormat>
   </PropertyGroup>
 
   <ItemGroup>
