--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,10 +19,10 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restaurar dependências
-        run: dotnet restore
+        run: dotnet restore src/fiap-catalog-service.sln
 
       - name: Build da aplicação
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build src/fiap-catalog-service.sln --configuration Release
 
   test:
     runs-on: ubuntu-latest
@@ -40,7 +40,7 @@ jobs:
         run: dotnet restore
 
       - name: Executar testes com cobertura
-        run: dotnet test --configuration Release --no-restore --collect:"XPlat Code Coverage"
+        run: dotnet test src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj --configuration Release --no-restore --collect:"XPlat Code Coverage"
 
   sonarcloud:
     runs-on: ubuntu-latest
