--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
       - develop
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout código
@@ -24,9 +24,9 @@ jobs:
       - name: Build da aplicação
         run: dotnet build src/fiap-catalog-service.sln --configuration Release
 
-  test:
+  Tests:
     runs-on: ubuntu-latest
-    needs: build
+    needs: Build
     steps:
       - name: Checkout código
         uses: actions/checkout@v3
@@ -42,9 +42,9 @@ jobs:
       - name: Executar testes com cobertura
         run: dotnet test src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj --configuration Release --no-restore --collect:"XPlat Code Coverage"
 
-  sonarcloud:
+  SonarCloud:
     runs-on: ubuntu-latest
-    needs: test
+    needs: Tests
     steps:
       - name: Checkout código
         uses: actions/checkout@v3
@@ -62,21 +62,26 @@ jobs:
           dotnet tool install --global dotnet-sonarscanner
           dotnet sonarscanner begin /k:"guilherme-martins92_fiap-catalog-service" /o:"guilherme-martins92" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
 
-  deploy:
+  Deploy:
+    if: github.ref == 'refs/heads/main'
+    needs: SonarCloud
     runs-on: ubuntu-latest
-    needs: sonarcloud
     steps:
       - name: Checkout código
         uses: actions/checkout@v3
 
-      - name: Configurar AWS CLI
+      - name: Instalar AWS SAM CLI
+        run: pip install aws-sam-cli
+
+      - name: Configurar credenciais AWS
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: 'us-east-1'
+          aws-region: us-east-1
 
-      - name: Fazer deploy do SAM template
-        run: |
-          sam build
-          sam deploy --stack-name my-dotnet-stack --capabilities CAPABILITY_IAM
+      - name: Build SAM Application
+        run: sam build
+
+      - name: Deploy para AWS
+        run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name fiap-catalog-service
