--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,75 +1,96 @@
-name: SonarQube
+name: .NET CI/CD Pipeline
+
 on:
   push:
     branches:
       - main
       - develop
-  pull_request:
-    types: [opened, synchronize, reopened]
 
 jobs:
-  build:
-    name: Build and analyze
-    runs-on: windows-latest
+  Build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: 'zulu' # Pode usar outra distribuição se necessário.
+      - name: Checkout código
+        uses: actions/checkout@v3
 
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Configurar .NET
+        uses: actions/setup-dotnet@v3
         with:
-          fetch-depth: 0  # Shallow clones devem ser desativados para melhor análise.
+          dotnet-version: '8.0.x'
 
-      - name: Cache SonarQube Cloud packages
-        uses: actions/cache@v4
+      - name: Restaurar dependências
+        run: dotnet restore src/fiap-catalog-service.sln
+
+      - name: Build da aplicação
+        run: dotnet build src/fiap-catalog-service.sln --configuration Release
+
+  Tests:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v3
+
+      - name: Configurar .NET
+        uses: actions/setup-dotnet@v3
         with:
-          path: ~\sonar\cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
+          dotnet-version: '8.0.x'
 
-      - name: Cache SonarQube Cloud scanner
-        id: cache-sonar-scanner
-        uses: actions/cache@v4
+      - name: Restaurar dependências
+        run: dotnet restore src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj
+
+      - name: Executar testes com cobertura
+        run: dotnet test src/fiap-catalog-service-tests/fiap-catalog-service-tests.csproj --configuration Release --no-restore --collect:"XPlat Code Coverage"
+
+      - name: Mover relatório de cobertura
+        run: mv src/fiap-catalog-service-tests/TestResults/**/*.xml coverage.xml
+
+  SonarCloud:
+    runs-on: ubuntu-latest
+    needs: Tests
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v3
+
+      - name: Configurar Java
+        uses: actions/setup-java@v3
         with:
-          path: .\.sonar\scanner
-          key: ${{ runner.os }}-sonar-scanner
-          restore-keys: ${{ runner.os }}-sonar-scanner
+          distribution: 'temurin'
+          java-version: '11'
 
-      - name: Install SonarQube Cloud scanner
-        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-        shell: powershell
+      - name: Instalar SonarScanner
         run: |
-          New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+          dotnet tool install --global dotnet-sonarscanner
+          echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-      - name: Run tests with coverage
-        shell: powershell
-        run: |
-          dotnet test src/fiap-catalog-service.sln --collect:"XPlat Code Coverage"
-
-      - name: Convert coverage report to Cobertura format
-        shell: powershell
-        run: |
-          reportgenerator "-reports:**/TestResults/**/*.xml" "-targetdir:coverage-report" "-reporttypes:Cobertura"
-
-      - name: SonarQube begin analysis
+      - name: Executar análise SonarCloud
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"guilherme-martins92_fiap-catalog-service" /o:"guilherme-martins92" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths="coverage-report/Cobertura.xml"
-
-      - name: Build the project
-        shell: powershell
-        run: |
+          dotnet sonarscanner begin /k:"guilherme-martins92_fiap-catalog-service" /o:"guilherme-martins92" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths="coverage.xml"
           dotnet build src/fiap-catalog-service.sln --configuration Release
+          dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
 
-      - name: SonarQube end analysis
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        shell: powershell
-        run: |
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+  Deploy:
+    if: github.ref == 'refs/heads/main'
+    needs: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v3
+
+      - name: Instalar AWS SAM CLI
+        run: pip install aws-sam-cli
+
+      - name: Configurar credenciais AWS
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Build SAM Application
+        run: sam build
+
+      - name: Deploy para AWS
+        run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name fiap-catalog-service
