--- a/src/fiap-catalog-service/fiap-catalog-service.csproj
+++ b/src/fiap-catalog-service/fiap-catalog-service.csproj
@@ -17,5 +17,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.13" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
-
+  <ItemGroup>
+    <SonarQubeSetting Include="sonar.coverage.exclusions">
+      <Value>**/Program.cs</Value>
+    </SonarQubeSetting>
+  </ItemGroup>
 </Project>
