Add vehicle reservation functionality with Lambda support
- Updated solution file to include "fiap-catalog-service-consumers" project.
- Modified `Vehicle.cs` to add `Reserved` and `Available` properties.
- Added new AWS Lambda function `ReservarVeiculoFunction` in `template.yaml`.
- Created `fiap-catalog-service-consumers.csproj` with .NET 8.0 and necessary dependencies.
- Implemented Lambda function logic in `Function.cs` to handle SQS events and update vehicle status.
- Introduced `CreatedOrderEvent` class to represent event data structure.

--- a/template.yaml
+++ b/template.yaml
@@ -5,7 +5,9 @@ Description: >
 
 Globals:
   Function:
-    Timeout: 100
+    Timeout: 100 
+    Runtime: dotnet8
+    MemorySize: 256
 
     Tracing: Active
     LoggingConfig:
@@ -39,6 +41,23 @@ Resources:
           Properties:
             Path: /
             Method: ANY
+
+  ReservarVeiculoFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: fiap-reservar-veiculo
+      CodeUri: ./src/fiap-catalog-service-consumers/
+      Handler: fiap_catalog_service_consumers.ReserveVehicleFunction::fiap_catalog_service_consumers.ReserveVehicleFunction.Function::FunctionHandler
+      Events:
+        SQSTrigger:
+          Type: SQS
+          Properties:
+            Queue: arn:aws:sqs:us-east-1:891377307312:catalogo-reservas
+      Policies:
+        - AWSLambdaBasicExecutionRole
+        - AmazonDynamoDBFullAccess  
+        - SQSPollerPolicy:
+            QueueName: catalogo-reservas
 
   VehiclesTable:
     Type: AWS::Serverless::SimpleTable
