--- a/src/fiap-catalog-service/fiap-catalog-service.csproj
+++ b/src/fiap-catalog-service/fiap-catalog-service.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="9.1.1" />
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.8.1" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="4.0.0.5" />
+    <PackageReference Include="AWSSDK.EventBridge" Version="4.0.3.1" />
     <PackageReference Include="AWSSDK.SQS" Version="4.0.0.3" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
